--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         <meta charset="UTF-8">
         <link rel="icon" type="image/svg+xml" href="/assets/favLogo.aea2a092.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>DiverEdu | Make it Happen</title>
+        <title>DiverEdu | Universidad Tecnológica</title>
         <meta content="DiverEdu es la plataforma donde podrás alcanzar tus metas, gracias a la ciencia, la tecnología y al método DiverEdu" name="description">
-        <meta content="DiverEdu | Make it Happen" property="og:title">
+        <meta content="DiverEdu | Universidad Tecnológica" property="og:title">
         <meta content="DiverEdu es la plataforma donde podrás alcanzar tus metas, gracias a la ciencia, la tecnología y al método DiverEdu" property="og:description">
         <meta property="og:image" content="/src/assets/logo.png">
         <meta property="og:type" content="website">
@@ -106,7 +106,7 @@
                                         </h1>
                                     </div>
                                     <h2 class="font-poppins font-semibold text-[2.5rem] leading-[3rem] ss:text-[3.5rem] ss:leading-[4rem] w-full ">
-                                        Escoge tu escuela<br class="block">
+                                        Sigue tu escuela<br class="block">
                                         <span class="text-gradient">y aprende lo que sea.</span>
                                     </h2>
                                     <p class="font-poppins font-normal text-textGray text-lg max-w-[480px] ">DiverEdu es un espacio en el que podrás hacer realidad esa Meta que siempre has soñado, gracias a la ciencia, la tecnología y a un método que te ayudará a alcanzar el éxito.</p>
@@ -187,7 +187,7 @@
                                     <div class="flex justify-start text-left items-center feature-card rounded-[20px] ">
                                         <img class="w-16 h-16 mt-6 mr-2 " src="/assets/step4.d54acb9e.png" alt="step-4">
                                         <div class="flex flex-col justify-center items-center">
-                                            <h3 class="font-poppins font-semibold text-[1.25rem] leading-[1.25rem] my-1 ">Paso 4 - Make it Happen</h3>
+                                            <h3 class="font-poppins font-semibold text-[1.25rem] leading-[1.25rem] my-1 ">Paso 4 - Universidad Tecnológica</h3>
                                             <p class="font-poppins font-normal text-textGray text-[1rem] leading-[1.25rem] my-2 ">Haz que suceda. Uno de los pasos claves para cumplir cualquier Meta, es la ACCIÓN, y nuestro sistema está diseñado para que puedas realizar pequeñas actividades, que te ayudarán a lograr ese gran resultado.</p>
                                         </div>
                                     </div>
@@ -211,7 +211,7 @@
                                     <p class="font-poppins font-normal text-textGray text-lg max-w-[480px] mt-5">Únete a la campaña #DiverEduGow, súmate a nuestra comunidad, y comparte tu experiencia en las redes sociales utilizando el hashtag. Nuestra Meta, es lograr para Diciembre de 2023, que 1.000.000 de usuarios, estén convirtiendo en realidad sus Metas, utilizando el Método DiverEdu.</p>
                                 </div>
                                 <div class="flex justify-center items-center mb-4">
-                                    <a class="" href="/coming-soon">
+                                    <a class="" href="https://play.google.com/store/apps/details?id=edugow.cachimboz">
                                         <button type="button" class="p-4 outline-none bg-gold-gradient font-poppins font-medium text-background text-[18px] rounded-[10px] my-4  hover:scale-110 ">¡Quiero Aprender Gratis!</button>
                                     </a>
                                 </div>
