link to the app in playstore

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                     </h2>
                                     <p class="font-poppins font-normal text-textGray text-lg max-w-[480px] ">DiverEdu es un espacio en el que podrás hacer realidad esa Meta que siempre has soñado, gracias a la ciencia, la tecnología y a un método que te ayudará a alcanzar el éxito.</p>
                                     <div class="flex justify-center items-center mt-10 z-[6] self-center sm:mt-4 md:self-start ">
-                                        <a class="" href="/coming-soon">
+                                        <a class="" href="https://play.google.com/store/apps/details?id=edugow.cachimboz">
                                             <button type="button" class="p-4 outline-none bg-gold-gradient font-poppins font-medium text-background text-[18px] rounded-[10px] sm:mt-4  hover:scale-110 ">¡Quiero Aprender Gratis!</button>
                                         </a>
                                     </div>
