--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <style data-merge-styles="true"></style>
         <style data-merge-styles="true"></style>
         <meta charset="UTF-8">
-        <link rel="icon" type="image/svg+xml" href="/assets/favLogo.aea2a092.png">
+        <link rel="icon" type="image/svg+xml" href="/assets/logo-dorado-diveredu.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>DiverEdu | Universidad Tecnológica</title>
         <meta content="DiverEdu es la plataforma donde podrás alcanzar tus metas, gracias a la ciencia, la tecnología y al método DiverEdu" name="description">
@@ -46,7 +46,7 @@
                     <div class="xl:max-w-[1280px] w-full">
                         <nav class="w-full flex justify-between items-center pt-8">
                             <a class="active" href="/" aria-current="page">
-                                <img class="w-[90px] h-[80px] " src="/assets/logo.ad66a58a.png" alt="Logo DiverEdu">
+                                <img class="w-[100%] h-[80px] " src="/assets/logo-golden.png" alt="Logo DiverEdu">
                             </a>
                             <ul class="list-none hidden w-3/4 justify-around items-center duration-300 md:flex ">
                                 <li class="flex justify-center items-center font-radley cursor-defaul ">
@@ -274,7 +274,7 @@
                         <section class="w-full flex flex-col justify-between py-4 px-6 ss:px-12 border-t-[1px] border-t-[#3F3E45] ">
                             <div class=" w-full grid auto-cols-fr grid-cols-2 gap-8 mb-4 md:grid-flow-col ">
                                 <a class="active" href="/" aria-current="page">
-                                    <img class="w-[90px] h-[80px] self-center " src="/assets/logo.ad66a58a.png" alt="Logo DiverEdu">
+                                    <img class="w-[90px] h-[80px] self-center " src="/assets/logo-dorado.png" alt="Logo DiverEdu">
                                 </a>
                                 <div class="flex flex-col flex-wrap justify-between items-baseline mt-10 md:mt-2">
                                     <div class="flex flex-col ">
