--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
         <style data-merge-styles="true"></style>
         <style data-merge-styles="true"></style>
         <meta charset="UTF-8">
-        <link rel="icon" type="image/svg+xml" href="/assets/logo-dorado-diveredu.png">
+        <link rel="icon" type="image/svg+xml" href="/assets/logo-golden.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>DiverEdu | Universidad Tecnológica</title>
         <meta content="DiverEdu es la plataforma donde podrás alcanzar tus metas, gracias a la ciencia, la tecnología y al método DiverEdu" name="description">
         <meta content="DiverEdu | Universidad Tecnológica" property="og:title">
         <meta content="DiverEdu es la plataforma donde podrás alcanzar tus metas, gracias a la ciencia, la tecnología y al método DiverEdu" property="og:description">
-        <meta property="og:image" content="/src/assets/logo.png">
+        <meta property="og:image" content="/src/assets/logo-golden.png">
         <meta property="og:type" content="website">
         <meta content="meta, propósito, objetivo" name="keywords">
         <script type="module" crossorigin="" src="/assets/index.js"></script>
@@ -112,7 +112,10 @@
                                     <p class="font-poppins font-normal text-textGray text-lg max-w-[480px] ">DiverEdu es un espacio en el que podrás hacer realidad esa Meta que siempre has soñado, gracias a la ciencia, la tecnología y a un método que te ayudará a alcanzar el éxito.</p>
                                     <div class="flex justify-center items-center mt-10 z-[6] self-center sm:mt-4 md:self-start ">
                                         <a class="" href="https://play.google.com/store/apps/details?id=edugow.cachimboz">
-                                            <button type="button" class="p-4 outline-none bg-gold-gradient font-poppins font-medium text-background text-[18px] rounded-[10px] sm:mt-4  hover:scale-110 ">¡Quiero Aprender Gratis!</button>
+                                            <button type="button" class="p-4 outline-none bg-gold-gradient font-poppins font-medium text-background text-[18px] rounded-[10px] sm:mt-4  hover:scale-110 ">¡Quiero Aprender!</button>
+                                        </a>
+                                        <a class="" href="https://play.google.com/store/apps/details?id=edugow.cachimboz">
+                                            <button type="button" class="p-4 outline-none bg-gold-gradient font-poppins font-medium text-background text-[18px] rounded-[10px] sm:mt-4  hover:scale-110 ">¡Quiero Enseñar!</button>
                                         </a>
                                     </div>
                                 </div>
@@ -274,7 +277,7 @@
                         <section class="w-full flex flex-col justify-between py-4 px-6 ss:px-12 border-t-[1px] border-t-[#3F3E45] ">
                             <div class=" w-full grid auto-cols-fr grid-cols-2 gap-8 mb-4 md:grid-flow-col ">
                                 <a class="active" href="/" aria-current="page">
-                                    <img class="w-[90px] h-[80px] self-center " src="/assets/logo-dorado.png" alt="Logo DiverEdu">
+                                    <img class="w-[100%] h-[80px] self-center " src="/assets/logo-golden.png" alt="Logo DiverEdu">
                                 </a>
                                 <div class="flex flex-col flex-wrap justify-between items-baseline mt-10 md:mt-2">
                                     <div class="flex flex-col ">
