--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <style data-merge-styles="true"></style>
         <style data-merge-styles="true"></style>
         <meta charset="UTF-8">
-        <link rel="icon" type="image/svg+xml" href="/assets/logo-golden.png">
+        <link rel="icon" type="image/svg+xml" href="/assets/logo-dorado.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>DiverEdu | Universidad Tecnológica</title>
         <meta content="DiverEdu es la plataforma donde podrás alcanzar tus metas, gracias a la ciencia, la tecnología y al método DiverEdu" name="description">
