--- a/index.html
+++ b/index.html
@@ -101,21 +101,33 @@
                                 <div class="flex justify-center items-start flex-col ">
                                     <div class="flex justify-between items-center w-full ">
                                         <h1 class="flex-1 font-poppins font-semibold text-[2.5rem] leading-[3rem] ss:text-[3.5rem] ss:leading-[4rem] ">
-                                            Estudia Gratis,<br class="block">
-                                            <span class="text-gradient">A tu ritmo</span>
+                                            Enseñanza
+                                            <span class="text-gradient">
+                                                Personalizada
+                                            </span>
+                                            <br class="block">
+                                            y aprendizaje
+                                            <span class="text-gradient"> 
+                                                interactivo
+                                            </span>
+                                            <br class="block">
+                                            a escala 
+                                            <span class="text-gradient"> 
+                                                global.
+                                            </span>
                                         </h1>
                                     </div>
-                                    <h2 class="font-poppins font-semibold text-[2.5rem] leading-[3rem] ss:text-[3.5rem] ss:leading-[4rem] w-full ">
-                                        Sigue tu escuela<br class="block">
-                                        <span class="text-gradient">y aprende lo que sea.</span>
-                                    </h2>
-                                    <p class="font-poppins font-normal text-textGray text-lg max-w-[480px] ">DiverEdu es un espacio en el que podrás hacer realidad esa Meta que siempre has soñado, gracias a la ciencia, la tecnología y a un método que te ayudará a alcanzar el éxito.</p>
+                                    <br>
+                                    <p class="font-poppins font-normal text-textGray text-lg max-w-[480px] ">En DiverEdu estamos construyendo una Red Social Educativa para que las futuras Ed-Tech y Universidades Tecnológicas conecten con cualquier estudiante del mundo.</p>
                                     <div class="flex justify-center items-center mt-10 z-[6] self-center sm:mt-4 md:self-start ">
                                         <a class="" href="https://play.google.com/store/apps/details?id=edugow.cachimboz">
-                                            <button type="button" class="p-4 outline-none bg-gold-gradient font-poppins font-medium text-background text-[18px] rounded-[10px] sm:mt-4  hover:scale-110 ">¡Quiero Aprender!</button>
+                                            <button type="button" class="p-4 outline-none bg-gold-gradient font-poppins font-medium text-background text-[18px] rounded-[10px] sm:mt-4  hover:scale-110 ">
+                                                ¡Aprender!
+                                            </button>
                                         </a>
+                                        <br>
                                         <a class="" href="https://play.google.com/store/apps/details?id=edugow.cachimboz">
-                                            <button type="button" class="p-4 outline-none bg-gold-gradient font-poppins font-medium text-background text-[18px] rounded-[10px] sm:mt-4  hover:scale-110 ">¡Quiero Enseñar!</button>
+                                            <button type="button" class="p-4 outline-none bg-gold-gradient font-poppins font-medium text-background text-[18px] rounded-[10px] sm:mt-4  hover:scale-110 ">¡Enseñar!</button>
                                         </a>
                                     </div>
                                 </div>
