--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <div class="xl:max-w-[1280px] w-full">
                         <nav class="w-full flex justify-between items-center pt-8">
                             <a class="active" href="/" aria-current="page">
-                                <img class="w-[100%] h-[80px] " src="/assets/logo-golden.png" alt="Logo DiverEdu">
+                                <img class="w-40%" src="/assets/logo-golden.png" alt="Logo DiverEdu">
                             </a>
                             <ul class="list-none hidden w-3/4 justify-around items-center duration-300 md:flex ">
                                 <li class="flex justify-center items-center font-radley cursor-defaul ">
@@ -97,7 +97,7 @@
                 <div class="flex justify-center items-center">
                     <div class="xl:max-w-[1280px] w-full">
                         <div class="px-6 md:px-12">
-                            <section class="flex flex-col mt-2 sm:items-center md:flex-row md:mb-10 ">
+                            <section class="flex flex-col mt-5 sm:items-center md:flex-row md:mb-10 ">
                                 <div class="flex justify-center items-start flex-col ">
                                     <div class="flex justify-between items-center w-full ">
                                         <h1 class="flex-1 font-poppins font-semibold text-[2.5rem] leading-[3rem] ss:text-[3.5rem] ss:leading-[4rem] ">
@@ -132,7 +132,7 @@
                                     </div>
                                 </div>
                                 <div class="flex justify-center items-center flex-1 relative">
-                                    <img class="w-[95%] h-[95%] relative z-[5] bg-transparent " src="/assets/step1.0e19a1b4.png" alt="setGoal">
+                                    <img class="w-[95%] h-[95%] relative z-[5] bg-transparent " src="/assets/web-diveredu-img.png" alt="setGoal">
                                     <div class="absolute z-[0] w-[40%] h-[35%] top-0 pink__gradient "></div>
                                     <div class="absolute z-[1] w-[80%] h-[80%] rounded-full bottom-40 white__gradient "></div>
                                     <div class="absolute z-[0] w-[50%] h-[50%] right-20 bottom-20 gold__gradient "></div>
@@ -144,13 +144,13 @@
                                         <path fill="none" d="M0 0h24v24H0z"></path>
                                         <path d="M22 10v8h-2v-8h2zm-2 10v2h2v-2h-2zm-2-2.71A7.99 7.99 0 0112 20c-4.41 0-8-3.59-8-8s3.59-8 8-8v9l7.55-7.55A9.965 9.965 0 0012 2C6.48 2 2 6.48 2 12s4.48 10 10 10c2.25 0 4.33-.74 6-2v-2.71z"></path>
                                     </svg>
-                                    <span class="font-poppins font-normal text-[1.5rem] leading-[2rem] max-w-[260px] sm:max-w-[160px] md:max-w-[200px] lg:max-w-[240px] ">9 de cada 10 personas no logran alcanzar sus metas</span>
+                                    <span class="font-poppins font-normal text-[1.5rem] leading-[2rem] max-w-[260px] sm:max-w-[160px] md:max-w-[200px] lg:max-w-[240px] ">más del 64.4% de la población tiene acceso a internet, y creciendo</span>
                                 </div>
                                 <div class="flex flex-1 justify-start text-center items-center flex-col my-1 py-1">
                                     <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 512 512" class="w-12 h-12 my-2 " height="1em" width="1em" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M50.18 16.44L71.49 318.7 93.28 16.44h-43.1zm399.82 0l24.5 405.86 16.4-405.86H450zM256 28.46l-7.2 21.62-15.5 108.62c.6.5 1.6 1.1 3.5 1.8 4.6 1.5 12 2.5 19.2 2.5 7.3 0 14.6-1 19.2-2.5 1.9-.7 2.9-1.3 3.5-1.8L263.2 50.08 256 28.46zm-116.2 3.45l12.4 74.49 62.8 37.7V69.51l-75.2-37.6zm232.4.05L297 69.56v74.54l62.8-37.7 12.4-74.44zm37 89.14L370 177.2 387 402l22.2-280.9zm-184.8 53.4L185 227v118.8c47.5 17.7 94.4 17.7 142 0V227l-39.4-52.5c-2.1 1.3-4.4 2.2-6.8 3-7.4 2.5-16 3.5-24.8 3.5s-17.4-1-24.8-3.5c-2.4-.8-4.7-1.7-6.8-3zm-112.5 25.9l18.6 290.9 13-255.6-31.6-35.3zm-59.51 58.4l-30.2 22.3 22.27 165 7.93-187.3zm361.31 52.8l11.2 180.3 17.3-134.5-28.5-45.8zM185 364.9V400c0-.3.4 2.4 1.6 5.6 1.2 3.2 3 7.4 5.4 12 4.8 9.3 11.6 20.5 19.3 31.1 7.7 10.6 16.4 20.7 24.6 27.7 8.2 7.1 15.9 10.6 20.1 10.6 4.2 0 11.9-3.5 20.1-10.6 8.2-7 16.9-17.1 24.6-27.7 7.7-10.6 14.5-21.8 19.3-31.1 2.4-4.6 4.2-8.8 5.4-12 1.2-3.2 1.6-5.8 1.6-5.6v-35.1c-47.2 16.1-94.9 16-142 0z"></path>
                                     </svg>
-                                    <span class="font-poppins font-normal text-[1.5rem] leading-[2rem] max-w-[260px] sm:max-w-[160px] md:max-w-[200px] lg:max-w-[240px] ">El 20% abandona en las primeras 2 semanas</span>
+                                    <span class="font-poppins font-normal text-[1.5rem] leading-[2rem] max-w-[260px] sm:max-w-[160px] md:max-w-[200px] lg:max-w-[240px] ">Educación on-line es hasta 60% más barata que la tradicional.</span>
                                 </div>
                                 <div class="flex flex-1 justify-start text-center items-center flex-col my-1 py-1">
                                     <svg stroke="currentColor" fill="currentColor" stroke-width="0" t="1569683657482" viewBox="0 0 1024 1024" version="1.1" class="w-12 h-12 my-2 " height="1em" width="1em" xmlns="http://www.w3.org/2000/svg">
@@ -158,13 +158,13 @@
                                         <path d="M952 474H829.8C812.5 327.6 696.4 211.5 550 194.2V72c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v122.2C327.6 211.5 211.5 327.6 194.2 474H72c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h122.2C211.5 696.4 327.6 812.5 474 829.8V952c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V829.8C696.4 812.5 812.5 696.4 829.8 550H952c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8zM512 756c-134.8 0-244-109.2-244-244s109.2-244 244-244 244 109.2 244 244-109.2 244-244 244z"></path>
                                         <path d="M512 392c-32.1 0-62.1 12.4-84.8 35.2-22.7 22.7-35.2 52.7-35.2 84.8s12.5 62.1 35.2 84.8C449.9 619.4 480 632 512 632s62.1-12.5 84.8-35.2C619.4 574.1 632 544 632 512s-12.5-62.1-35.2-84.8C574.1 404.4 544.1 392 512 392z"></path>
                                     </svg>
-                                    <span class="font-poppins font-normal text-[1.5rem] leading-[2rem] max-w-[260px] sm:max-w-[160px] md:max-w-[200px] lg:max-w-[240px] ">60% lo deja entre el primer y el segundo mes</span>
+                                    <span class="font-poppins font-normal text-[1.5rem] leading-[2rem] max-w-[260px] sm:max-w-[160px] md:max-w-[200px] lg:max-w-[240px] ">tasa de retención de aprendizaje on-line del 60%, vs el 8% en presencial</span>
                                 </div>
                                 <div class="flex flex-1 justify-start text-center items-center flex-col my-1 py-1">
                                     <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 512 512" class="w-12 h-12 my-2 " height="1em" width="1em" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M221.313 16a23.682 23.695 0 0 0-23.688 23.688v106.406a23.682 23.695 0 0 0 2.156 9.72 23.682 23.695 0 0 0 3.157 13.81l41.75 71.626-79 55.438 6.094-48.625a23.682 23.695 0 0 0-8.186-20.97l-66.28-81.937a23.682 23.695 0 0 0-33.314-3.5l-9.188 7.438a23.682 23.695 0 0 0-3.53 33.344l59.78 73.906-11.25 89.937a23.682 23.695 0 0 0 12.47 23.876l37.468 53.47a23.695 23.682 1.57 0 0 2.344 2.812 23.682 23.695 0 0 0 13.594 20.062L262 491.53a23.682 23.695 0 0 0 9.97 2.22 23.682 23.695 0 0 0 23.53-2.063l87.156-60.937a23.682 23.695 0 0 0 5.844-33l-6.78-9.688a23.682 23.695 0 0 0-32.97-5.875l-72.406 50.657-59.063-27.625 120.595-84.626a23.695 23.682 1.57 0 0 5.53-5.5 23.682 23.695 0 0 0 14.626-13.594l37.22-91.53 87.813-44.845a23.694 23.682 1.18 0 0 10.312-31.875L488 122.687a23.694 23.682 1.18 0 0-31.875-10.343l-94.688 48.375a23.694 23.682 1.18 0 0-9.843 9.436 23.682 23.695 0 0 0-8.344 10.47l-27.375 67.31-5.22-7.436a23.682 23.695 0 0 0-3-8.844l-50.81-87.094V39.688A23.682 23.695 0 0 0 233.154 16h-11.843zM77.75 376A59.994 60 0 0 0 16 436a59.994 60 0 1 0 120 0 59.994 60 0 0 0-58.25-60z"></path>
                                     </svg>
-                                    <span class="font-poppins font-normal text-[1.5rem] leading-[2rem] max-w-[260px] sm:max-w-[160px] md:max-w-[200px] lg:max-w-[240px] ">El 20% restante abandona luego de los 6 meses</span>
+                                    <span class="font-poppins font-normal text-[1.5rem] leading-[2rem] max-w-[260px] sm:max-w-[160px] md:max-w-[200px] lg:max-w-[240px] ">265 millones de niños y jóvenes no asisten a la escuela</span>
                                 </div>
                             </section>
                             <section class="flex flex-col pb-4 sm:items-center md:flex-row ">
@@ -246,7 +246,7 @@
                                     <section class="feature-card rounded-[20px] p-4">
                                         <div class="flex flex-col justify-between mx-4 my-4 max-w-[280px] bg-transparent xl:max-w-[320px] ">
                                             <div class="flex">
-                                                <img src="/assets/step1.0e19a1b4.png" alt="Janet James" class="w-[48px] h-[48px] rounded-full ">
+                                                <img src="/assets/web-diveredu-img.png" alt="Janet James" class="w-[48px] h-[48px] rounded-full ">
                                                 <div class="flex flex-col ml-4">
                                                     <h4 class="font-poppins font-semibold text-[20px] leading-[32px] ">Janet James</h4>
                                                     <p class="font-poppins font-normal text-[16px] leading-[24px] ">Emprendedora</p>
