--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
                                     </div>
                                 </li>
                                 <li class="flex justify-center items-center font-radley cursor-defaul ">
-                                    <a class="mx-1.5 hover:text-textGray " href="/contact">Contacto</a>
+                                    <a class="mx-1.5 hover:text-textGray " href="/">Contacto</a>
                                 </li>
                                 <li class="flex justify-center items-center font-radley cursor-defaul ">
-                                    <a class="mx-1.5 hover:text-textGray " href="/coming-soon">Iniciar Sesión</a>
+                                    <a class="mx-1.5 hover:text-textGray " href="/">Iniciar Sesión</a>
                                 </li>
                             </ul>
                             <div>
@@ -172,7 +172,7 @@
                                     <h3 class="font-poppins font-semibold text-gradient text-[2.5rem] leading-[3rem] ss:text-[3.75rem] ss:leading-[4.25rem] w-full ">Método EduGow</h3>
                                     <p class="font-poppins font-normal text-textGray text-lg max-w-[480px]">Sabemos lo difícil que puede ser alcanzar una Meta, y todos los obstáculos que se pueden presentar en el camino, por eso decidimos crear el Método DiverEdu, un sistema de 4 pasos, con los que podrás tener grandes probabilidades, de alcanzar eso que tanto sueñas.</p>
                                     <div class="flex self-center md:self-start ">
-                                        <a class="" href="/coming-soon">
+                                        <a class="" href="/">
                                             <button type="button" class="p-4 outline-none bg-gold-gradient font-poppins font-medium text-background text-[18px] rounded-[10px] mt-10 hover:scale-110 ">¡Probar el Método!</button>
                                         </a>
                                     </div>
@@ -296,19 +296,19 @@
                                         <h3 class="font-poppins font-semibold text-textGray ">Casos de uso</h3>
                                         <ul>
                                             <li class="font-poppins font-normal cursor-pointer mt-1 underline hover:text-textGray ">
-                                                <a class="" href="/use-cases/university-study">Estudiar para el gran examen</a>
+                                                <a class="" href="/#">Estudiar para el gran examen</a>
                                             </li>
                                             <li class="font-poppins font-normal cursor-pointer mt-1 underline hover:text-textGray ">
-                                                <a class="" href="/use-cases/create-business">Emprender</a>
+                                                <a class="" href="/#">Emprender</a>
                                             </li>
                                             <li class="font-poppins font-normal cursor-pointer mt-1 underline hover:text-textGray ">
-                                                <a class="" href="/use-cases/do-exercise">Hacer ejercicio</a>
+                                                <a class="" href="/#">Hacer ejercicio</a>
                                             </li>
                                             <li class="font-poppins font-normal cursor-pointer mt-1 underline hover:text-textGray ">
-                                                <a class="" href="/use-cases/create-new-habit">Crear un nuevo hábito</a>
+                                                <a class="" href="/#">Crear un nuevo hábito</a>
                                             </li>
                                             <li class="font-poppins font-normal cursor-pointer mt-1 underline hover:text-textGray ">
-                                                <a class="" href="/use-cases/learn-new-language">Aprender un nuevo idioma</a>
+                                                <a class="" href="/#">Aprender un nuevo idioma</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -318,13 +318,13 @@
                                         <h3 class="font-poppins font-semibold text-textGray ">Sobre DiverEdu</h3>
                                         <ul>
                                             <li class="font-poppins font-normal cursor-pointer mt-1 underline hover:text-textGray ">
-                                                <a class="" href="/about-us">Sobre nosotros</a>
+                                                <a class="" href="/">Sobre nosotros</a>
                                             </li>
                                             <li class="font-poppins font-normal cursor-pointer mt-1 underline hover:text-textGray ">
-                                                <a class="" href="/DiverEdu-method">Método DiverEdu</a>
+                                                <a class="" href="/">Método DiverEdu</a>
                                             </li>
                                             <li class="font-poppins font-normal cursor-pointer mt-1 underline hover:text-textGray ">
-                                                <a class="" href="/contact">Contáctanos</a>
+                                                <a class="" href="/">Contáctanos</a>
                                             </li>
                                             <li class="font-poppins font-normal cursor-pointer mt-1 underline hover:text-textGray ">
                                                 <a class="active" href="/" aria-current="page">Términos y condiciones</a>
