--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- Last Published: Sat Apr 29 2023 21:43:48 GMT+0000 (Coordinated Universal Time) -->
 <html
-  data-wf-domain="www.makers.build"
+  data-wf-domain="www.DiverEdu.build"
   data-wf-page="641e18654bb66481ca458659"
   data-wf-site="641e18654bb664e4a54585f1"
 >
@@ -190,7 +190,7 @@
             <a href="/blog" class="nav-link w-nav-link">Blog</a>
             <a href="/team" class="nav-link w-nav-link">Team</a>
             <!-- <a
-              href="https://lu.ma/makers_fellowship"
+              href="https://lu.ma/DiverEdu_fellowship"
               class="nav-link w-nav-link"
               >Events</a
             > -->
@@ -809,7 +809,7 @@
                 </div>
                 <p>
                   Learn how to start and launch your own dApp in less than one
-                  hour with Camila, cofounder of Makers.
+                  hour with Camila, cofounder of DiverEdu.
                 </p>
               </div>
             </div>
@@ -887,7 +887,7 @@
               learned the hard way from the lonely path, making plenty of
               mistakes, but this shouldn&#x27;t be the case for you.<br />
             </p>
-            <a href="https://jobs.lever.co/makers" class="cta-copy w-button"
+            <a href="https://jobs.lever.co/DiverEdu" class="cta-copy w-button"
               >Apply Now</a
             >
           </div>
@@ -1117,7 +1117,7 @@
               <div class="feature-content">
                 <h3>Applications are open</h3>
                 <p class="no-margins">
-                  Applications for Makers Fellowship Cohort 3 will open on
+                  Applications for DiverEdu Fellowship Cohort 3 will open on
                   April, 10th, 2023.
                 </p>
               </div>
@@ -1135,7 +1135,7 @@
                 <h3>First phase: Video</h3>
                 <p class="no-margins">
                   You will send us a video explaining why you want to be part of
-                  Makers and talk about you and your aspirations.
+                  DiverEdu and talk about you and your aspirations.
                 </p>
               </div>
             </div>
@@ -1173,7 +1173,7 @@
                 <h3>Third phase: Interviews</h3>
                 <p class="no-margins">
                   If your application looks promising, you will have 2 to 3 more
-                  interview with different members of the Makers Team. This
+                  interview with different members of the DiverEdu Team. This
                   helps us to verify the program is a fit for you.
                 </p>
               </div>
@@ -1220,7 +1220,7 @@
       <div class="main-container w-container">
         <div class="title-wrap">
           <h2 data-w-id="b2bff84c-c50e-11b8-4f13-08a71010fbe8">
-            How does a cohort of <span class="span-accent-1">makers</span> looks
+            How does a cohort of <span class="span-accent-1">DiverEdu</span> looks
             like?
           </h2>
         </div>
@@ -1760,12 +1760,12 @@
               people.
             </h2>
             <p class="no-margins">
-              Makers is a curated community designed to increase your odds of
+              DiverEdu is a curated community designed to increase your odds of
               building a successful venture-backed company or career in
               startups. We onboard you with a 3-month program to help you set
               yourself for success.
             </p>
-            <a href="https://jobs.lever.co/makers" class="cta w-button"
+            <a href="https://jobs.lever.co/DiverEdu" class="cta w-button"
               >Apply Now</a
             >
           </div>
@@ -1789,7 +1789,7 @@
           <div
             data-tf-widget="slKqX9G8"
             data-tf-opacity="100"
-            data-tf-iframe-props="title=(Website) Makers Application - Referring"
+            data-tf-iframe-props="title=(Website) DiverEdu Application - Referring"
             data-tf-transitive-search-params
             data-tf-medium="snippet"
             style="width: 120%; height: 600px"
@@ -1815,7 +1815,7 @@
           <div
             data-tf-widget="slKqX9G8"
             data-tf-opacity="100"
-            data-tf-iframe-props="title=(Website) Makers Application - Referring"
+            data-tf-iframe-props="title=(Website) DiverEdu Application - Referring"
             data-tf-transitive-search-params
             data-tf-medium="snippet"
             style="width: 250px; height: 600px"
@@ -1840,7 +1840,7 @@
         <div class="expandable-center-master">
           <div class="expandable-single">
             <div class="expandable-top">
-              <h3 class="faq-h3">What is Makers Fellowship?</h3>
+              <h3 class="faq-h3">What is DiverEdu Fellowship?</h3>
               <div class="plus-expand-master">
                 <div class="plus-line"></div>
                 <div class="plus-line vertical"></div>
@@ -1848,7 +1848,7 @@
             </div>
             <div class="expandable-bottom">
               <p class="faq-paragraph">
-                No. Makers is not an accelerator. We don&#x27;t invest in invest
+                No. DiverEdu is not an accelerator. We don&#x27;t invest in invest
                 nor take equity on any of them. We offer an educational program
                 and community for free.
               </p>
@@ -1963,7 +1963,7 @@
             </div>
             <div class="expandable-bottom">
               <p class="faq-paragraph">
-                Feel free to email us at team@makers.build
+                Feel free to email us at team@DiverEdu.build
               </p>
             </div>
           </div>
@@ -1979,15 +1979,15 @@
           >
             <a href="/old-home" class="brand-link-footer w-inline-block"
               ><img
-                src="https://uploads-ssl.webflow.com/641e18654bb664e4a54585f1/641fcb31f2602a5550e1f96a_Logo%20Makers-25%20(1).png"
+                src="https://uploads-ssl.webflow.com/641e18654bb664e4a54585f1/641fcb31f2602a5550e1f96a_Logo%20DiverEdu-25%20(1).png"
                 loading="lazy"
                 sizes="(max-width: 479px) 100vw, 300px"
                 srcset="
-                  https://uploads-ssl.webflow.com/641e18654bb664e4a54585f1/641fcb31f2602a5550e1f96a_Logo%20Makers-25%20(1)-p-500.png   500w,
-                  https://uploads-ssl.webflow.com/641e18654bb664e4a54585f1/641fcb31f2602a5550e1f96a_Logo%20Makers-25%20(1)-p-800.png   800w,
-                  https://uploads-ssl.webflow.com/641e18654bb664e4a54585f1/641fcb31f2602a5550e1f96a_Logo%20Makers-25%20(1)-p-1080.png 1080w,
-                  https://uploads-ssl.webflow.com/641e18654bb664e4a54585f1/641fcb31f2602a5550e1f96a_Logo%20Makers-25%20(1)-p-1600.png 1600w,
-                  https://uploads-ssl.webflow.com/641e18654bb664e4a54585f1/641fcb31f2602a5550e1f96a_Logo%20Makers-25%20(1)-p-2000.png 2000w
+                  https://uploads-ssl.webflow.com/641e18654bb664e4a54585f1/641fcb31f2602a5550e1f96a_Logo%20DiverEdu-25%20(1)-p-500.png   500w,
+                  https://uploads-ssl.webflow.com/641e18654bb664e4a54585f1/641fcb31f2602a5550e1f96a_Logo%20DiverEdu-25%20(1)-p-800.png   800w,
+                  https://uploads-ssl.webflow.com/641e18654bb664e4a54585f1/641fcb31f2602a5550e1f96a_Logo%20DiverEdu-25%20(1)-p-1080.png 1080w,
+                  https://uploads-ssl.webflow.com/641e18654bb664e4a54585f1/641fcb31f2602a5550e1f96a_Logo%20DiverEdu-25%20(1)-p-1600.png 1600w,
+                  https://uploads-ssl.webflow.com/641e18654bb664e4a54585f1/641fcb31f2602a5550e1f96a_Logo%20DiverEdu-25%20(1)-p-2000.png 2000w
                 "
                 alt=""
                 class="brand-image-footer"
