--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
                 transform: matrix(0.95, 0, 0, 0.95, 0, 0);
             }
         </style>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6065803220873242"
+        crossorigin="anonymous"></script>
     </head>
     <body cz-shortcut-listen="true">
         <div id="root">
